--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,14 +22,18 @@
 .ascii-art {
     font-family: "RoboMono", monospace;
     white-space: pre; 
-    font-size: 30px;
-    line-height: 1;
-    margin-bottom: 30px;
+    line-height: 1.1;
+    margin-bottom: 2rem;
     user-select: none;
+
+    font-size: clamp(1.25rem, 1.5vw, 1.875rem);
+
+    color: black;
+    transition: color 1s ease-in-out;
 }
 
 .ascii-art:hover {
-    animation: pulseWhite 1s infinite alternate;
+    animation: pulseWhite 1.5s infinite alternate;
 }
 
 @keyframes pulseWhite {
@@ -40,6 +44,7 @@
         color: white;
     }
 }
+
 
 body {
     margin: 0;
